welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:12: error: not found: value sol
  sol()
  ^PictureMono1:16: error: not found: value sol
  sol()
  ^PictureMono1:20: error: not found: value sol
  sol()
  ^