welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def marquerSol(){
  baisseBrosse()
  leveBrosse()

}

def faireV(){
  avance(2)
  sol()
  avance()
  gauche()
  avance()
  sol()
  recule()
  droite()
  avance()
  sol()
  avance(2)
  gauche()
}

var compt:Int=0
for (compt<-1 to 4){
  faireV()
}
